# seed-vc

./: app.py  inference_v2.py  pyproject.toml  requirements.txt  seedvc.py  train_v2.py
data/: ft_dataset.py
modules/bigvgan/: bigvgan.py
modules/v2/: cfm.py  vc_wrapper.py
